--- a/scripts/extract_data_from_source.ipynb
+++ b/scripts/extract_data_from_source.ipynb
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "795bc6cd",
+   "id": "028f3b8e",
    "metadata": {
     "scrolled": true
    },
@@ -240,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "56591cf1",
+   "id": "5f2c0e55",
    "metadata": {
     "scrolled": false
    },
@@ -260,7 +260,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "7871e3bb",
+   "id": "13fdaa50",
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "75a84be5",
+   "id": "ce0789a0",
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +423,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "d870fb9c",
+   "id": "0cba1678",
    "metadata": {},
    "outputs": [
     {
@@ -2006,10 +2006,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "0af89511",
+   "execution_count": 13,
+   "id": "9672c97b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data successfully uploaded to prices.json\n"
+     ]
+    }
+   ],
    "source": [
     "store_to_google_bucket(prices_df, 'prices')"
    ]
@@ -2017,7 +2025,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cdaea574",
+   "id": "3acb1765",
    "metadata": {},
    "outputs": [],
    "source": []
