update transformation_load, adding some code to load data to AWS redshift

--- a/scripts/transformation_load.ipynb
+++ b/scripts/transformation_load.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "id": "6cb6d7c1",
    "metadata": {},
    "outputs": [],
@@ -13,6 +13,7 @@
     "import json\n",
     "import os\n",
     "import sqlalchemy\n",
+    "from sqlalchemy import create_engine\n",
     "import time\n",
     "from tqdm.notebook import tqdm\n",
     "from io import StringIO\n",
@@ -21,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "id": "ddc7237b",
    "metadata": {},
    "outputs": [],
@@ -42,6 +43,27 @@
     "    df[date_column] = df[date_column].dt.strftime('%Y-%m-%d').astype('string').fillna('None')\n",
     "    \n",
     "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "928140f6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#setup redshift conncetion\n",
+    "REDSHIFT_ENDPOINT = 'juntian-cluster.cl4tv7kd0trb.us-east-1.redshift.amazonaws.com:5439/dev'\n",
+    "REDSHIFT_USER = 'awsuser'\n",
+    "REDSHIFT_PASS = 'arn:aws:secretsmanager:us-east-1:381492032483:secret:redshift!different-states-hospital-price-awsuser-FrEDZG'\n",
+    "REDSHIFT_PORT = '5439'\n",
+    "REDSHIFT_DB = 'different-states-hospital-price'\n",
+    "\n",
+    "# Create the connection string\n",
+    "connection_string = f\"postgresql+psycopg2://{REDSHIFT_USER}:{REDSHIFT_PASS}@{REDSHIFT_ENDPOINT}:{REDSHIFT_PORT}/{REDSHIFT_DB}\"\n",
+    "        \n",
+    "#Create engine\n",
+    "engine = create_engine(connection_string)"
    ]
   },
   {
@@ -457,24 +479,24 @@
       "4          NaT\n",
       "Name: publish_date, dtype: datetime64[ns]\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1400 entries, 0 to 1399\n",
+      "Index: 1378 entries, 0 to 1399\n",
       "Data columns (total 12 columns):\n",
       " #   Column                Non-Null Count  Dtype \n",
       "---  ------                --------------  ----- \n",
-      " 0   npi_number            1400 non-null   string\n",
-      " 1   name                  1400 non-null   string\n",
-      " 2   url                   1400 non-null   string\n",
-      " 3   street_address        1400 non-null   string\n",
-      " 4   city                  1400 non-null   string\n",
-      " 5   state                 1400 non-null   string\n",
-      " 6   zip_code              1400 non-null   string\n",
-      " 7   publish_date          1400 non-null   string\n",
-      " 8   publish_date_year     1400 non-null   string\n",
-      " 9   publish_date_quarter  1400 non-null   string\n",
-      " 10  publish_date_month    1400 non-null   string\n",
-      " 11  publish_date_day      1400 non-null   string\n",
-      "dtypes: string(12)\n",
-      "memory usage: 131.4 KB\n",
+      " 0   npi_number            1378 non-null   string\n",
+      " 1   name                  1378 non-null   string\n",
+      " 2   url                   1378 non-null   string\n",
+      " 3   street_address        1378 non-null   string\n",
+      " 4   city                  1378 non-null   string\n",
+      " 5   state                 1378 non-null   string\n",
+      " 6   zip_code              1378 non-null   object\n",
+      " 7   publish_date          1378 non-null   string\n",
+      " 8   publish_date_year     1378 non-null   string\n",
+      " 9   publish_date_quarter  1378 non-null   string\n",
+      " 10  publish_date_month    1378 non-null   string\n",
+      " 11  publish_date_day      1378 non-null   string\n",
+      "dtypes: object(1), string(11)\n",
+      "memory usage: 140.0+ KB\n",
       "None\n"
      ]
     },
@@ -538,7 +560,7 @@
        "      <td>Birmingham</td>\n",
        "      <td>AL</td>\n",
        "      <td>35209</td>\n",
-       "      <td>Unknown</td>\n",
+       "      <td>None</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
@@ -583,7 +605,7 @@
        "      <td>Rock Rapids</td>\n",
        "      <td>IA</td>\n",
        "      <td>51246-2020</td>\n",
-       "      <td>Unknown</td>\n",
+       "      <td>None</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
        "      <td>None</td>\n",
@@ -617,10 +639,10 @@
        "\n",
        "  publish_date publish_date_year publish_date_quarter publish_date_month  \\\n",
        "0   2021-01-01              2021                    1                  1   \n",
-       "1      Unknown              None                 None               None   \n",
+       "1         None              None                 None               None   \n",
        "2   2021-01-01              2021                    1                  1   \n",
        "3   2021-01-01              2021                    1                  1   \n",
-       "4      Unknown              None                 None               None   \n",
+       "4         None              None                 None               None   \n",
        "\n",
        "  publish_date_day  \n",
        "0                1  \n",
@@ -665,250 +687,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "0a8c1f8a",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 72724852 entries, 0 to 72724851\n",
-      "Data columns (total 4 columns):\n",
-      " #   Column      Dtype  \n",
-      "---  ------      -----  \n",
-      " 0   code        object \n",
-      " 1   npi_number  object \n",
-      " 2   payer       object \n",
-      " 3   price       float64\n",
-      "dtypes: float64(1), object(3)\n",
-      "memory usage: 2.2+ GB\n",
-      "None\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>code</th>\n",
-       "      <th>npi_number</th>\n",
-       "      <th>payer</th>\n",
-       "      <th>price</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>00000A</td>\n",
-       "      <td>1053358010.0</td>\n",
-       "      <td>CASH</td>\n",
-       "      <td>75047.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>00000A</td>\n",
-       "      <td>1336186394</td>\n",
-       "      <td>CASH</td>\n",
-       "      <td>75047.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>00001U</td>\n",
-       "      <td>1003139775.0</td>\n",
-       "      <td>CASH</td>\n",
-       "      <td>457.23</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>00001U</td>\n",
-       "      <td>1053824292.0</td>\n",
-       "      <td>CASH</td>\n",
-       "      <td>972.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>00001U</td>\n",
-       "      <td>1417901406.0</td>\n",
-       "      <td>CASH</td>\n",
-       "      <td>296.00</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     code    npi_number payer     price\n",
-       "0  00000A  1053358010.0  CASH  75047.00\n",
-       "1  00000A    1336186394  CASH  75047.00\n",
-       "2  00001U  1003139775.0  CASH    457.23\n",
-       "3  00001U  1053824292.0  CASH    972.00\n",
-       "4  00001U  1417901406.0  CASH    296.00"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#load prices.json into dataframe\n",
-    "bucket_path = 'gs://different-state-hospital-prices/prices.json'\n",
-    "prices_df = pd.read_json(bucket_path, lines=True)\n",
-    "\n",
-    "print(prices_df.info())\n",
-    "prices_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "e11e13aa",
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_df = prices_df.copy(deep=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "81408e6f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 72724852 entries, 0 to 72724851\n",
-      "Data columns (total 4 columns):\n",
-      " #   Column      Dtype  \n",
-      "---  ------      -----  \n",
-      " 0   code        string \n",
-      " 1   npi_number  string \n",
-      " 2   payer       string \n",
-      " 3   price       float64\n",
-      "dtypes: float64(1), string(3)\n",
-      "memory usage: 2.2 GB\n",
-      "None\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>code</th>\n",
-       "      <th>npi_number</th>\n",
-       "      <th>payer</th>\n",
-       "      <th>price</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>00000A</td>\n",
-       "      <td>1053358010</td>\n",
-       "      <td>CASH</td>\n",
-       "      <td>75047.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>00000A</td>\n",
-       "      <td>1336186394</td>\n",
-       "      <td>CASH</td>\n",
-       "      <td>75047.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>00001U</td>\n",
-       "      <td>1003139775</td>\n",
-       "      <td>CASH</td>\n",
-       "      <td>457.23</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>00001U</td>\n",
-       "      <td>1053824292</td>\n",
-       "      <td>CASH</td>\n",
-       "      <td>972.00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>00001U</td>\n",
-       "      <td>1417901406</td>\n",
-       "      <td>CASH</td>\n",
-       "      <td>296.00</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "     code  npi_number payer     price\n",
-       "0  00000A  1053358010  CASH  75047.00\n",
-       "1  00000A  1336186394  CASH  75047.00\n",
-       "2  00001U  1003139775  CASH    457.23\n",
-       "3  00001U  1053824292  CASH    972.00\n",
-       "4  00001U  1417901406  CASH    296.00"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "prices_df['npi_number'] = prices_df['npi_number'].astype(str)\n",
-    "prices_df['npi_number'] = prices_df['npi_number'].str.replace(r'\\D', '', regex=True)\n",
-    "prices_df['npi_number'] = prices_df['npi_number'].apply(lambda x: x[:10] if len(x) >= 10 else None).astype('string')\n",
+    "#load prices.json into dataframe\n",
+    "bucket_path = 'gs://different-state-hospital-prices/prices.json'\n",
     "\n",
-    "prices_df = prices_df.astype({\n",
-    "    'code':'string',\n",
-    "    'payer':'string'})\n",
+    "# Create a JSON reader object using a defined chunk size\n",
+    "json_reader = pd.read_json(bucket_path, lines=True, chunksize=1000)\n",
     "\n",
-    "print(prices_df.info())\n",
-    "prices_df.head()"
+    "# Process each chunk within a loop\n",
+    "for prices_df in json_reader:\n",
+    "    prices_df['npi_number'] = prices_df['npi_number'].astype(str)\n",
+    "    prices_df['npi_number'] = prices_df['npi_number'].str.replace(r'\\D', '', regex=True)\n",
+    "    prices_df['npi_number'] = prices_df['npi_number'].apply(lambda x: x[:10] if len(x) >= 10 else None).astype('string')\n",
+    "\n",
+    "    prices_df = prices_df.astype({\n",
+    "        'code':'string',\n",
+    "        'payer':'string'})\n",
+    "    print(prices_df.head())\n",
+    "    \n",
+    "\n",
+    "print(prices_df.info())"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4bdc0e4a",
+   "id": "5fdc40fd",
    "metadata": {},
    "outputs": [],
    "source": []
