update python scripts and sql scripts

--- a/scripts/transformation_load.ipynb
+++ b/scripts/transformation_load.ipynb
@@ -22,33 +22,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "ddc7237b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#date transformation function\n",
-    "def process_dates(df,date_column):\n",
-    "    # Convert the date column to datetime\n",
-    "    df[date_column] = pd.to_datetime(df[date_column], unit='ms', errors='coerce')\n",
-    "    print(df[date_column].head())\n",
-    "    \n",
-    "    #Splitting the date into multiple unit\n",
-    "    df[f'{date_column}_year'] = df[date_column].dt.year.astype('Int64').astype('string').replace('<NA>', 'None')\n",
-    "    df[f'{date_column}_quarter'] = df[date_column].dt.quarter.astype('Int64').astype('string').replace('<NA>', 'None')\n",
-    "    df[f'{date_column}_month'] = df[date_column].dt.month.astype('Int64').astype('string').replace('<NA>', 'None')\n",
-    "    df[f'{date_column}_day'] = df[date_column].dt.day.astype('Int64').astype('string').replace('<NA>', 'None')\n",
-    "    \n",
-    "    # Format the date column\n",
-    "    df[date_column] = df[date_column].dt.strftime('%Y-%m-%d').astype('string').fillna('None')\n",
-    "    \n",
-    "    return df"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 8,
-   "id": "928140f6",
+   "id": "6397f4ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,16 +34,16 @@
     "REDSHIFT_PORT = '5439'\n",
     "REDSHIFT_DB = 'different-states-hospital-price'\n",
     "\n",
-    "# Create the connection string\n",
-    "connection_string = f\"postgresql+psycopg2://{REDSHIFT_USER}:{REDSHIFT_PASS}@{REDSHIFT_ENDPOINT}:{REDSHIFT_PORT}/{REDSHIFT_DB}\"\n",
+    "# Create the connection\n",
+    "connection = f\"postgresql+psycopg2://{REDSHIFT_USER}:{REDSHIFT_PASS}@{REDSHIFT_ENDPOINT}:{REDSHIFT_PORT}/{REDSHIFT_DB}\"\n",
     "        \n",
     "#Create engine\n",
-    "engine = create_engine(connection_string)"
+    "engine = create_engine(connection)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "27b52ece",
    "metadata": {},
    "outputs": [
@@ -159,7 +134,7 @@
        "4     0001A  HC ADM PFIZER SARSCOV2 30MCG/0.3ML 1ST             None"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -659,11 +634,15 @@
    ],
    "source": [
     "#hospitals transformation\n",
-    "#covert npi number to string\n",
+    "#drop the uncessary column\n",
+    "hospitals_df.drop(['publish_date'],axis='columns')\n",
+    "\n",
+    "#Unify npi_number\n",
     "hospitals_df['npi_number'] = hospitals_df['npi_number'].astype(str)\n",
     "hospitals_df['npi_number'] = hospitals_df['npi_number'].str.replace(r'\\D', '', regex=True)\n",
     "hospitals_df['npi_number'] = hospitals_df['npi_number'].apply(lambda x: x[:10] if len(x) >= 10 else None).astype('string')\n",
     "\n",
+    "#unify zip_code\n",
     "hospitals_df['zip_code'] = hospitals_df['zip_code'].astype(str)\n",
     "hospitals_df['zip_code'] = hospitals_df['zip_code'].str.replace('.0','')\n",
     "\n",
@@ -675,8 +654,6 @@
     "    'city':'string',\n",
     "    'state':'string',\n",
     "})\n",
-    "\n",
-    "hospitals_df = process_dates(hospitals_df,'publish_date')\n",
     "\n",
     "hospitals_df = hospitals_df.fillna('None')\n",
     "\n",
@@ -696,10 +673,10 @@
     "bucket_path = 'gs://different-state-hospital-prices/prices.json'\n",
     "\n",
     "# Create a JSON reader object using a defined chunk size\n",
-    "json_reader = pd.read_json(bucket_path, lines=True, chunksize=1000)\n",
+    "json_reader = pd.read_json(bucket_path, lines=True, chunksize=2000)\n",
     "\n",
     "# Process each chunk within a loop\n",
-    "for prices_df in json_reader:\n",
+    "for chunk in json_reader:\n",
     "    prices_df['npi_number'] = prices_df['npi_number'].astype(str)\n",
     "    prices_df['npi_number'] = prices_df['npi_number'].str.replace(r'\\D', '', regex=True)\n",
     "    prices_df['npi_number'] = prices_df['npi_number'].apply(lambda x: x[:10] if len(x) >= 10 else None).astype('string')\n",
@@ -716,10 +693,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5fdc40fd",
+   "id": "5d9c572b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#create new dataframe\n"
+   ]
   }
  ],
  "metadata": {
