--- a/scripts/transformation_load.ipynb
+++ b/scripts/transformation_load.ipynb
@@ -672,21 +672,32 @@
     "#load prices.json into dataframe\n",
     "bucket_path = 'gs://different-state-hospital-prices/prices.json'\n",
     "\n",
-    "# Create a JSON reader object using a defined chunk size\n",
+    "prices_df = pd.DataFrame()\n",
+    "\n",
+    "# Create a JSON reader\n",
     "json_reader = pd.read_json(bucket_path, lines=True, chunksize=2000)\n",
     "\n",
-    "# Process each chunk within a loop\n",
+    "# Process each chunk\n",
     "for chunk in json_reader:\n",
-    "    prices_df['npi_number'] = prices_df['npi_number'].astype(str)\n",
-    "    prices_df['npi_number'] = prices_df['npi_number'].str.replace(r'\\D', '', regex=True)\n",
-    "    prices_df['npi_number'] = prices_df['npi_number'].apply(lambda x: x[:10] if len(x) >= 10 else None).astype('string')\n",
+    "    # Clean 'npi_number' column\n",
+    "    chunk['npi_number'] = chunk['npi_number'].astype(str)\n",
+    "    chunk['npi_number'] = chunk['npi_number'].str.replace(r'\\D', '', regex=True)\n",
+    "    chunk['npi_number'] = chunk['npi_number'].apply(lambda x: x[:10] if len(x) >= 10 else None).astype('string')\n",
     "\n",
-    "    prices_df = prices_df.astype({\n",
-    "        'code':'string',\n",
-    "        'payer':'string'})\n",
-    "    print(prices_df.head())\n",
+    "    # change dtype\n",
+    "    chunk = chunk.astype({\n",
+    "        'code': 'string',\n",
+    "        'payer': 'string'\n",
+    "    })\n",
     "    \n",
+    "    # Append to dataframe\n",
+    "    prices_df = pd.concat([prices_df, chunk], ignore_index=True)\n",
+    "    \n",
+    "prices_df = prices_df.fillna('none')\n",
     "\n",
+    "prices_df = prices_df.drop_duplicates()\n",
+    "\n",
+    "print(prices_df.head())\n",
     "print(prices_df.info())"
    ]
   },
